# AIM-VEE

./: .gitignore  README.md  dataset_analysis.ipynb  pyproject.toml
.venv_plot/: pyvenv.cfg
docs/: api.md  cli.md  data.md  experiments.md  repro.md  structure.md  workflows.md
models/delta_learner/: diff_mlp.pt
models/predictor/: best_model.pt  pca_X.pkl  scaler_X.pkl  scaler_y.pkl
models/qemfi_surrogate/: best_model.pt
models/rf_morgan/: metrics.json
models/schnet/: best_model.pt  final_model.pt
notebooks/qemfi_surrogate/: dataset_analysis.ipynb  test_and_eval.ipynb
notebooks/qm9_testing/: test_and_eval.ipynb
notebooks/structural_latent_encoder/: dataset_analysis.ipynb
outputs/chemprop_eval/bemis-murcko/: chemprop_smiles_only.csv  metrics_summary.json
outputs/chemprop_eval/random/: chemprop_smiles_only.csv  metrics_summary.json
outputs/chemprop_eval/size/: chemprop_smiles_only.csv  metrics_summary.json
outputs/chemprop_eval/tail-split/: chemprop_smiles_only.csv  metrics_summary.json
outputs/qemfi_eval/: metrics_summary.json
scripts/: generate_metadata.py  main.py  model.py  plot_performance_bars.py  train.py
scripts/baseline_models/: rf_with_morgan.py  schnet.py
scripts/data_prep/: generate_cm.py  generate_features_cm.py  generate_slatm.py  prep_qemfi.py
scripts/delta_learner/: dataset_analysis.ipynb
scripts/vee_predictor/: dataset_analysis.ipynb  test.py  test_and_eval.ipynb  train.py
src/aimvee/: __init__.py  api.py  cli.py  utils.py
src/aimvee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+70 files in other folders)
